--- a/assets/css/components/_panels.scss
+++ b/assets/css/components/_panels.scss
@@ -4,7 +4,7 @@
     border-radius: 6px;
     position: relative;
     transition: border-color 0.2s ease;
-    margin-top: 0.7rem;
+    margin: 0;
     
     &__content {
         padding: 1rem;
